# ProtoMesh

./: .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  prepare_build.sh
cmake/: BuildFlatbuffers.cmake
deviceLib/: Device.cpp  Device.hpp  Network.cpp  Network.h  Registry.cpp  Registry.hpp  const.hpp
deviceLib/Device/: Device.cpp  Device.hpp
deviceLib/Network/: Network.cpp  Network.hpp  NetworkManager.cpp  NetworkManager.hpp
deviceLib/Registry/: Registry.cpp  Registry.hpp  RegistryEntry.cpp  RegistryEntry.hpp
deviceLib/api/: network.hpp  storage.hpp  time.hpp
deviceLib/api/javascript/: javascript.hpp
deviceLib/buffers/registry/: entry.fbs  registry.fbs
deviceLib/capnp/: generic.capnp  group.capnp  node.capnp
deviceLib/crypto/: crypto.cpp  crypto.hpp  crypto_asym.cpp  crypto_sym.cpp
deviceLib/registry/: Registry.cpp  Registry.hpp  RegistryEntry.cpp  RegistryEntry.hpp
documentation/protocol/: ProtoMesh.tex
examples/: debug.cpp
modules/common/: Serializable.hpp
modules/communication/: CMakeLists.txt  CredentialsStore.cpp  CredentialsStore.hpp  Message.cpp  Message.hpp  Network.cpp  Network.hpp  NetworkSimulator.cpp  NetworkSimulator.hpp  RelativeTimeProvider.hpp  TransmissionHandler.cpp  TransmissionHandler.hpp  routing.cpp  routing.hpp  transmission.cpp  transmission.hpp
modules/communication/iarp/: Advertisement.cpp  Advertisement.hpp  RoutingTable.cpp  RoutingTable.hpp
modules/communication/ierp/: RouteCache.cpp  RouteCache.hpp  RouteDiscovery.cpp  RouteDiscovery.hpp
modules/cryptography/: CMakeLists.txt  asymmetric.cpp  asymmetric.hpp  hash.cpp  hash.hpp  serialization.cpp  serialization.hpp  sha512.hpp  symmetric.cpp  symmetric.hpp  uuid.cpp  uuid.hpp
modules/integration/: CMakeLists.txt  Device.cpp  Device.hpp  MeshHandler.cpp  MeshHandler.hpp
modules/integration/delegates/: DeviceDelegate.hpp  DeviceHandlerDelegate.hpp
modules/interaction/: CMakeLists.txt  Endpoint.cpp  Endpoint.hpp  variable_types.hpp
modules/interaction/EndpointTypes/: Brightness.cpp  Brightness.hpp  Metadata.cpp  Metadata.hpp
modules/interaction/rpc/: FunctionCall.cpp  FunctionCall.hpp  FunctionCallResponse.cpp  FunctionCallResponse.hpp
old/cmake/: BuildFlatbuffers.cmake
old/os-specifics/unix/: unix.cpp
old/src/Logger/: Logger.cpp  Logger.hpp
old/src/api/: network_test.cpp  storage.hpp  time.hpp
old/src/buffers/network/: message_datagram.fbs  route_discovery_datagram.fbs
old/src/crypto/: crypto.cpp  crypto.hpp  crypto_asym.cpp  crypto_sym.cpp  sha512.hpp
old/src/helpers/: SafeQueue.hpp
old/src/routing/: MessageRouter.hpp
old/src/test/data/: registry_entry.json
os-specifics/linux/: CMakeLists.txt  linux.cpp  linux.hpp
os-specifics/unix/: CMakeLists.txt  unix.hpp
osLib/linux/: CMakeLists.txt  linux.cpp  linux.hpp
schemes/: CMakeLists.txt
schemes/communication/: deliveryFailure.fbs  message.fbs
schemes/communication/iarp/: advertisement.fbs
schemes/communication/ierp/: routeDiscovery.fbs  routeDiscoveryAcknowledgement.fbs
schemes/cryptography/: asymmetric.fbs  uuid.fbs
schemes/interaction/device/: device.fbs  encryptedDevice.fbs  endpoint.fbs  query.fbs
schemes/interaction/device/interface/: endpoint.fbs
schemes/interaction/rpc/: FunctionCall.fbs  FunctionCallResponse.fbs  StreamData.fbs
src/: const.hpp
src/Device/: Device.cpp  Device.hpp
src/Group/: Group.cpp  Group.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/Network/: Groups.cpp  Network.cpp  Network.hpp  NetworkManager.cpp  NetworkManager.hpp  Nodes.cpp
src/Network/Manager/: NetworkManager.cpp  NetworkManager.hpp
src/Node/: Node.cpp  Node.hpp
src/Registry/: Registry.cpp  Registry.hpp  RegistryAddition.cpp  RegistryEntry.cpp  RegistryEntry.hpp  RegistrySync.cpp  Validators.hpp
src/Registry/Entry/: RegistryEntry.cpp  RegistryEntry.hpp
src/api/: api.hpp  keys.hpp  network.hpp  network_test.cpp  storage.hpp  time.hpp
src/api/javascript/: javascript.cpp
src/buffers/: crypto.fbs  uuid.fbs
src/buffers/crypto/: asym.fbs  uuid.fbs
src/buffers/network/: advertisement_datagram.fbs  group.fbs  message_datagram.fbs  node.fbs  route_discovery_datagram.fbs
src/buffers/registry/: entry.fbs  registry.fbs
src/buffers/registry/sync/: entries.fbs  entry.fbs  hash.fbs  head.fbs  request.fbs
src/crypto/: crypto.cpp  crypto.hpp  crypto_asym.cpp  crypto_sym.cpp
src/helpers/: SafeQueue.hpp
src/routing/: MessageRouter.cpp  MessageRouter.hpp  Route.hpp
src/test/data/: registry_entry.json
